# items

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: settings.py  urls.py
items/: admin.py  forms.py  models.py  services.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_alter_item_price_alter_order_currency.py
items/templates/items/: create_order.html  detail_order.html
